testsuite/tests/lexical_envs/invalid_entity_resolver/test.out
== bad_return_type.lkt ==
common.lkt:27:9: error: Entity resolver properties must return entities (got FooNode.entity.array)
27 |         add_to_env_kv(node.name.symbol, node, resolver=FooNode.resolve_ref)
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


== has_args.lkt ==
common.lkt:27:9: error: Entity resolver properties must have no argument
27 |         add_to_env_kv(node.name.symbol, node, resolver=FooNode.resolve_ref)
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


== has_dynvars.lkt ==
common.lkt:27:9: error: Entity resolver properties must have no dynamically bound variable
27 |         add_to_env_kv(node.name.symbol, node, resolver=FooNode.resolve_ref)
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


lkt_compile: Done
